npmx not required to write in script tag, as npm automatically handles command exeuction.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "This Module is the refresher for React core concepts",
   "scripts": {
-    "start": "npx parcel index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
