Basic Restaurant UI created.

--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "react-refresh",
+  "name": "first-app",
   "version": "1.0.0",
-  "description": "This Module is the refresher for React core concepts",
+  "description": "First React App learning core concepts",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sudhanshu-28/react-refresh.git"
+    "url": "git+https://github.com/sudhanshu-28/namaste-react.git"
   },
   "author": "Sudhanshu Rai",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sudhanshu-28/react-refresh/issues"
+    "url": "https://github.com/sudhanshu-28/namaste-react/issues"
   },
-  "homepage": "https://github.com/sudhanshu-28/react-refresh#readme",
+  "homepage": "https://github.com/sudhanshu-28/namaste-react#readme",
   "devDependencies": {
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "browserslist": [
     "last 2 versions"
